add proper detection of lowest cluster

--- a/cluster_simulator/notebooks/iosea-workshop-3.ipynb
+++ b/cluster_simulator/notebooks/iosea-workshop-3.ipynb
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "application duration = 332.5\n"
+      "application duration = 257.5\n"
      ]
     },
     {
@@ -96,24 +96,24 @@
          "line": {
           "shape": "linear"
          },
-         "name": "app#D9",
+         "name": "app#D3",
          "text": [
           "WRITE|to/from:HDD|volume=1.5 GB",
           "WRITE|to/from:HDD|volume=1.5 GB",
           "COMPUTE|volume=0B",
           "COMPUTE|volume=0B",
-          "WRITE|to/from:HDD|volume=5.0 GB",
-          "WRITE|to/from:HDD|volume=5.0 GB"
+          "WRITE|to/from:SSD|volume=5.0 GB",
+          "WRITE|to/from:SSD|volume=5.0 GB"
          ],
          "textposition": "top center",
          "type": "scatter",
          "x": [
-          302.5,
-          340,
-          340,
-          510,
-          510,
-          635
+          0,
+          37.5,
+          37.5,
+          207.5,
+          207.5,
+          257.5
          ],
          "xaxis": "x",
          "y": [
@@ -121,8 +121,8 @@
           40,
           0,
           0,
-          40,
-          40
+          100,
+          100
          ],
          "yaxis": "y"
         },
@@ -131,7 +131,7 @@
           "dash": "dot",
           "shape": "linear"
          },
-         "name": "D9 mvt",
+         "name": "D3 mvt",
          "text": [],
          "textposition": "top center",
          "type": "scatter",
@@ -147,24 +147,24 @@
          "name": "BB",
          "showlegend": false,
          "text": [
-          "D9|Write|HDD | +volume=1.5 GB",
-          "D9|Compute | +volume=0B",
-          "D9|Write|HDD | +volume=5.0 GB"
+          "D3|Write|HDD | +volume=1.5 GB",
+          "D3|Compute | +volume=0B",
+          "D3|Write|SSD | +volume=5.0 GB"
          ],
          "textposition": "top center",
          "type": "scatter",
          "x": [
-          302.5,
-          340,
-          510,
-          635
+          0,
+          37.5,
+          207.5,
+          257.5
          ],
          "xaxis": "x2",
          "y": [
-          1500000000,
-          1500000000,
-          1500000000,
-          1500000000
+          0,
+          0,
+          0,
+          0
          ],
          "yaxis": "y2"
         },
@@ -175,26 +175,54 @@
          "name": "HDD",
          "showlegend": false,
          "text": [
-          "D9|Write|HDD | +volume=1.5 GB",
-          "D9|Compute | +volume=0B",
-          "D9|Write|HDD | +volume=5.0 GB"
+          "D3|Write|HDD | +volume=1.5 GB",
+          "D3|Compute | +volume=0B",
+          "D3|Write|SSD | +volume=5.0 GB"
          ],
          "textposition": "top center",
          "type": "scatter",
          "x": [
-          302.5,
-          340,
-          510,
-          635
+          0,
+          37.5,
+          207.5,
+          257.5
          ],
          "xaxis": "x3",
          "y": [
-          6500000000,
-          7999999999.999999,
-          7999999999.999999,
-          13000000000
+          0,
+          1500000000,
+          1500000000,
+          1500000000
          ],
          "yaxis": "y3"
+        },
+        {
+         "line": {
+          "shape": "linear"
+         },
+         "name": "SSD",
+         "showlegend": false,
+         "text": [
+          "D3|Write|HDD | +volume=1.5 GB",
+          "D3|Compute | +volume=0B",
+          "D3|Write|SSD | +volume=5.0 GB"
+         ],
+         "textposition": "top center",
+         "type": "scatter",
+         "x": [
+          0,
+          37.5,
+          207.5,
+          257.5
+         ],
+         "xaxis": "x4",
+         "y": [
+          0,
+          0,
+          0,
+          4999999999.999999
+         ],
+         "yaxis": "y4"
         },
         {
          "line": {
@@ -203,19 +231,19 @@
          "showlegend": false,
          "type": "scatter",
          "x": [
-          302.5,
-          340,
-          510,
-          635
+          0,
+          37.5,
+          207.5,
+          257.5
          ],
-         "xaxis": "x4",
+         "xaxis": "x5",
          "y": [
           1,
           1,
           1,
           0
          ],
-         "yaxis": "y4"
+         "yaxis": "y5"
         },
         {
          "line": {
@@ -231,15 +259,15 @@
          ],
          "type": "scatter",
          "x": [
-          302.5,
-          635
+          0,
+          257.5
          ],
-         "xaxis": "x4",
+         "xaxis": "x5",
          "y": [
           2,
           2
          ],
-         "yaxis": "y4"
+         "yaxis": "y5"
         }
        ],
        "layout": {
@@ -249,7 +277,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "D9",
+          "text": "D3",
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
@@ -266,7 +294,7 @@
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
-          "y": 0.71875,
+          "y": 0.78,
           "yanchor": "bottom",
           "yref": "paper"
          },
@@ -279,7 +307,20 @@
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
-          "y": 0.4375,
+          "y": 0.56,
+          "yanchor": "bottom",
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 16
+          },
+          "showarrow": false,
+          "text": "SSD (200.0 GB)",
+          "x": 0.5,
+          "xanchor": "center",
+          "xref": "paper",
+          "y": 0.33999999999999997,
           "yanchor": "bottom",
           "yref": "paper"
          },
@@ -292,7 +333,7 @@
           "x": 0.5,
           "xanchor": "center",
           "xref": "paper",
-          "y": 0.15625,
+          "y": 0.12,
           "yanchor": "bottom",
           "yref": "paper"
          }
@@ -1113,7 +1154,7 @@
           0,
           1
          ],
-         "matches": "x4",
+         "matches": "x5",
          "showticklabels": false,
          "title": {
           "text": "time in s"
@@ -1125,7 +1166,7 @@
           0,
           1
          ],
-         "matches": "x4",
+         "matches": "x5",
          "showticklabels": false,
          "title": {
           "text": "time in s"
@@ -1137,7 +1178,7 @@
           0,
           1
          ],
-         "matches": "x4",
+         "matches": "x5",
          "showticklabels": false,
          "title": {
           "text": "time in s"
@@ -1149,6 +1190,18 @@
           0,
           1
          ],
+         "matches": "x5",
+         "showticklabels": false,
+         "title": {
+          "text": "time in s"
+         }
+        },
+        "xaxis5": {
+         "anchor": "y5",
+         "domain": [
+          0,
+          1
+         ],
          "title": {
           "text": "time in s"
          }
@@ -1156,7 +1209,7 @@
         "yaxis": {
          "anchor": "x",
          "domain": [
-          0.84375,
+          0.88,
           1
          ],
          "title": {
@@ -1166,8 +1219,8 @@
         "yaxis2": {
          "anchor": "x2",
          "domain": [
-          0.5625,
-          0.71875
+          0.66,
+          0.78
          ],
          "title": {
           "text": "BB usage in Bytes"
@@ -1176,8 +1229,8 @@
         "yaxis3": {
          "anchor": "x3",
          "domain": [
-          0.28125,
-          0.4375
+          0.44,
+          0.56
          ],
          "title": {
           "text": "HDD usage in Bytes"
@@ -1186,8 +1239,18 @@
         "yaxis4": {
          "anchor": "x4",
          "domain": [
+          0.22,
+          0.33999999999999997
+         ],
+         "title": {
+          "text": "SSD usage in Bytes"
+         }
+        },
+        "yaxis5": {
+         "anchor": "x5",
+         "domain": [
           0,
-          0.15625
+          0.12
          ],
          "title": {
           "text": "CPU usage"
