--- a/job_decomposer/job_decomposer/stat_methods_exploration.ipynb
+++ b/job_decomposer/job_decomposer/stat_methods_exploration.ipynb
@@ -436,14 +436,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrieving C:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\dataset_generation\\dataset_generation\\dataset_oth_db\\job_1391.csv\n"
+     "ename": "NameError",
+     "evalue": "name 'list_jobs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\job_decomposer\\job_decomposer\\stat_methods_exploration.ipynb Cell 22\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/job_decomposer/job_decomposer/stat_methods_exploration.ipynb#ch0000021?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mretrieving \u001b[39m\u001b[39m{\u001b[39;00mcsv_file\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/job_decomposer/job_decomposer/stat_methods_exploration.ipynb#ch0000021?line=4'>5</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m pd\u001b[39m.\u001b[39mread_csv(csv_file, index_col\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/job_decomposer/job_decomposer/stat_methods_exploration.ipynb#ch0000021?line=7'>8</a>\u001b[0m df \u001b[39m=\u001b[39m get_df_by_job_id()\n",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\job_decomposer\\job_decomposer\\stat_methods_exploration.ipynb Cell 22\u001b[0m in \u001b[0;36mget_df_by_job_id\u001b[1;34m(job_id)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/job_decomposer/job_decomposer/stat_methods_exploration.ipynb#ch0000021?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_df_by_job_id\u001b[39m(job_id\u001b[39m=\u001b[39m\u001b[39m1391\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/job_decomposer/job_decomposer/stat_methods_exploration.ipynb#ch0000021?line=1'>2</a>\u001b[0m     job_files, job_ids, datasets \u001b[39m=\u001b[39m list_jobs()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/job_decomposer/job_decomposer/stat_methods_exploration.ipynb#ch0000021?line=2'>3</a>\u001b[0m     csv_file \u001b[39m=\u001b[39m job_files[job_ids\u001b[39m.\u001b[39mindex(\u001b[39mstr\u001b[39m(job_id))]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/job_decomposer/job_decomposer/stat_methods_exploration.ipynb#ch0000021?line=3'>4</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mretrieving \u001b[39m\u001b[39m{\u001b[39;00mcsv_file\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'list_jobs' is not defined"
      ]
     }
    ],
