--- a/job_decomposer/job_decomposer/kmeans_methods_exploration.ipynb
+++ b/job_decomposer/job_decomposer/kmeans_methods_exploration.ipynb
@@ -478,6 +478,14 @@
       "File \u001b[1;32m<__array_function__ internals>:5\u001b[0m, in \u001b[0;36mdot\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: shapes (3242,1) and (3242,1) not aligned: 1 (dim 1) != 3242 (dim 0)"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
