adding some slides to notebook demo

--- a/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb
+++ b/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb
@@ -14,8 +14,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"recommendation_system_diagram.png\"\n",
+    "     alt=\"Rec System\"\n",
+    "     style=\"width: 55vw; float: left; margin-right: 10px;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![App Decomposer Picture](app_decomposer.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -649,366 +665,6 @@
           1503590684,
           1540674116,
           157931785
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          0,
-          0
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          2,
-          2
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          7,
-          7
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          9,
-          9
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          13,
-          13
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          15,
-          15
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          20,
-          20
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          22,
-          22
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          23,
-          23
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          28,
-          28
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          29,
-          29
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          32,
-          32
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          43,
-          43
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          47,
-          47
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          58,
-          58
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          71,
-          71
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          81,
-          81
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          87,
-          87
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          91,
-          91
-         ],
-         "y": [
-          0,
-          15845913378
-         ]
-        },
-        {
-         "line": {
-          "color": "black",
-          "dash": "longdash",
-          "width": 0.5
-         },
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scatter",
-         "x": [
-          95,
-          95
-         ],
-         "y": [
-          0,
-          15845913378
          ]
         },
         {
@@ -2241,7 +1897,7 @@
         "title": {
          "text": "IOI Signal decomposition"
         },
-        "width": 1200,
+        "width": 800,
         "yaxis": {
          "title": {
           "text": "volume conveyed by the application"
@@ -2255,7 +1911,7 @@
     }
    ],
    "source": [
-    "fig = plot_detected_phases(jobid=3911, merge=True, show_phases=True, width=1200, height=600)\n",
+    "fig = plot_detected_phases(jobid=3911, merge=True, show_phases=False, width=1200, height=600)\n",
     "fig.show() "
    ]
   },
@@ -2367,7 +2023,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inputting representation in App Simulator\n"
+    "Inputting representation in App Simulator\n",
+    "We use the representation as an input for Execution Simulator\n",
+    "![App Decomposer Picture](cluster_simulator.png)"
    ]
   },
   {
