--- a/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb
+++ b/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2268,23 +2268,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "tuple indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\app_decomposer\\notebooks\\iosea-mid-term-review-demo.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m                 \u001b[39mreturn\u001b[39;00m cd\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m# Launch decomposition on the signal\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m cd \u001b[39m=\u001b[39m decompose_ioi_job(jobid\u001b[39m=\u001b[39;49m\u001b[39m3911\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(cd)\n",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\app_decomposer\\notebooks\\iosea-mid-term-review-demo.ipynb Cell 6\u001b[0m in \u001b[0;36mdecompose_ioi_job\u001b[1;34m(jobid)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m mock_get_node_count\u001b[39m.\u001b[39mreturn_value \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# init the job decomposer\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m cd \u001b[39m=\u001b[39m ComplexDecomposer(v0_threshold\u001b[39m=\u001b[39;49m\u001b[39m0.02\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mreturn\u001b[39;00m cd\n",
+      "File \u001b[1;32mc:\\users\\a770398\\io-sea\\io-sea-3.4-analytics\\app_decomposer\\app_decomposer\\job_decomposer.py:401\u001b[0m, in \u001b[0;36mComplexDecomposer.__init__\u001b[1;34m(self, job_id, signal_decomposer, v0_threshold)\u001b[0m\n\u001b[0;32m    399\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnode_count \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_job_node_count(api_uri, api_token)\n\u001b[0;32m    400\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimeseries \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_job_timeseries(api_uri, api_token)\n\u001b[1;32m--> 401\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimestamps \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtimeseries[\u001b[39m\"\u001b[39;49m\u001b[39mvolume\u001b[39;49m\u001b[39m\"\u001b[39;49m][\u001b[39m\"\u001b[39m\u001b[39mtimestamp\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m    402\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mread_signal \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimeseries[\u001b[39m\"\u001b[39m\u001b[39mvolume\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mbytesRead\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m    403\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwrite_signal \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimeseries[\u001b[39m\"\u001b[39m\u001b[39mvolume\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mbytesWritten\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: tuple indices must be integers or slices, not str"
+     ]
+    }
+   ],
    "source": [
     "%%capture\n",
     "logger.remove()\n",
     "def decompose_ioi_job(jobid):\n",
     "    with patch.object(ComplexDecomposer, 'get_job_timeseries') as mock_get_timeseries:\n",
     "        with patch.object(Configuration, 'get_kc_token') as mock_get_kc_token:\n",
-    "            mock_get_timeseries.return_value = get_job_timeseries_from_file(job_id=jobid)\n",
-    "            mock_get_kc_token.return_value = 'token'\n",
-    "            # init the job decomposer\n",
-    "            cd = ComplexDecomposer(v0_threshold=0.02)\n",
-    "            return cd\n",
+    "            with patch.object(ComplexDecomposer, 'get_job_node_count') as mock_get_node_count:                    \n",
+    "                mock_get_timeseries.return_value = get_job_timeseries_from_file(job_id=jobid)\n",
+    "                mock_get_kc_token.return_value = 'token'\n",
+    "                mock_get_node_count.return_value = 1\n",
+    "                # init the job decomposer\n",
+    "                cd = ComplexDecomposer(v0_threshold=0.02)\n",
+    "                return cd\n",
     "        \n",
     "# Launch decomposition on the signal\n",
     "cd = decompose_ioi_job(jobid=3911)\n",
+    "print(cd)\n",
     "compute, reads, read_bw, writes, write_bw = cd.get_job_representation(merge_clusters=True)\n",
     "# This is the app encoding representation for Execution Simulator\n",
     "print(f\"compute={compute}, reads={reads}, read_bw={read_bw}\")\n",
