--- a/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb
+++ b/app_decomposer/notebooks/iosea-mid-term-review-demo.ipynb
@@ -8360,7 +8360,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('iosea-venv')",
+   "display_name": "Python 3.8.10 ('py38')",
    "language": "python",
    "name": "python3"
   },
@@ -8374,12 +8374,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c87beb4c7de1fcbf6155f8da331fc04a584374d4c389d75c2ece6a4f03553c96"
+    "hash": "67356b80ae16e0e40687386dbd074ace3ba90441f54bfe58917536db46d8a36b"
    }
   }
  },
