--- a/app_decomposer/notebooks/comaprison_simulation_ioi_mixed_mode.ipynb
+++ b/app_decomposer/notebooks/comaprison_simulation_ioi_mixed_mode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,12 +165,15 @@
       "54 & Seq & Seq & 500 & 1000 & 2.52 MB/s & 1.07 GB/s  \\\\\n",
       "\\hline\n",
       "56 & Uncl & Uncl & 0 & 0 & 0B/s & 0B/s  \\\\\n",
-      "\\hline\n"
+      "\\hline\n",
+      "/home_nfs/mimounis/iosea-wp3-recommandation-system/app_decomposer/notebooks\n",
+      "/home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset\n"
      ]
     }
    ],
    "source": [
     "jobid=3918\n",
+    "dataset_path = os.path.join(dirname(dirname(os.getcwd())), \"performance_data\", \"performance_data\", \"dataset\")\n",
     "#%%capture\n",
     "logger.remove()\n",
     "def decompose_ioi_job(jobid):\n",
@@ -202,8 +205,10 @@
     "            phase_str.append(f\"{representation[key][i]}\")\n",
     "    print(\" & \".join(phase_str) + \"  \\\\\\\\\")\n",
     "    print(\"\\\\hline\")\n",
-    "    \n",
     "\n",
+    "    \n",
+    "csv_file = os.path.join(dataset_path, f\"dataset_job_{jobid}.csv\")\n",
+    "cd.get_phases_features(representation, job_id=jobid, dataset=csv_file)\n",
     "        "
    ]
   },
@@ -5760,7 +5765,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "iosea-venv",
+   "display_name": "py38",
    "language": "python",
    "name": "python3"
   },
@@ -5774,12 +5779,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13 (default, Mar 28 2022, 06:59:08) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c87beb4c7de1fcbf6155f8da331fc04a584374d4c389d75c2ece6a4f03553c96"
+    "hash": "67356b80ae16e0e40687386dbd074ace3ba90441f54bfe58917536db46d8a36b"
    }
   }
  },
