--- a/app_decomposer/notebooks/comaprison_simulation_ioi_mixed_mode.ipynb
+++ b/app_decomposer/notebooks/comaprison_simulation_ioi_mixed_mode.ipynb
@@ -17,7 +17,7 @@
     "from os.path import dirname, abspath\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
-    "from performance_data.performance_data import PhaseData, DataTable\n",
+    "from performance_data.data_table import PhaseData, DataTable\n",
     "from performance_data import DATASET_FILE\n",
     "from app_decomposer import DEFAULT_CONFIGURATION, KIWI_CONFIG, CURRENT_DIR, API_DICT_TS, IOI_SAMPLING_PERIOD, DATASET_SOURCE\n",
     "from app_decomposer.api_connector import request_delegator\n",
@@ -132,6 +132,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   job_id  nodes read_volume write_volume read_io_pattern write_io_pattern  \\\n",
+      "0    3918      1          0B           0B            uncl             uncl   \n",
+      "1    3918      1     1.73 GB           0B             seq             uncl   \n",
+      "2    3918      1     1.59 GB      2.04 GB             seq              seq   \n",
+      "3    3918      1     3.17 GB      4.14 GB             seq              seq   \n",
+      "4    3918      1     3.02 MB      5.33 GB             seq              seq   \n",
+      "5    3918      1     7.05 MB      5.31 GB             seq              seq   \n",
+      "6    3918      1     2.52 MB      5.33 GB             seq              seq   \n",
+      "7    3918      1          0B           0B            uncl             uncl   \n",
+      "\n",
+      "  read_io_size write_io_size     ioi_bw     nfs_bw     lfs_bw   sbb_bw  \n",
+      "0           0B            0B         0B         0B         0B       0B  \n",
+      "1      2.13 MB            0B  346.16 MB  110.21 MB    2.24 GB  3.79 GB  \n",
+      "2      1.22 MB       2.07 MB  362.76 MB  104.03 MB  843.42 MB  2.38 GB  \n",
+      "3      3.49 MB       2.07 MB  592.83 MB   152.8 MB  991.08 MB   2.2 GB  \n",
+      "4      5.03 KB       5.33 MB  267.34 MB  101.96 MB  743.83 MB  1.33 GB  \n",
+      "5      5.04 KB       5.33 MB  265.96 MB  107.03 MB  953.29 MB  1.33 GB  \n",
+      "6      5.04 KB       5.33 MB   213.9 MB  108.87 MB  983.48 MB  1.34 GB  \n",
+      "7           0B            0B         0B         0B         0B       0B  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print_readable_values(\"/home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset/complete_dataset_job_3918_5.0 GB.csv\", [\"read_volume\", \"write_volume\", 'write_io_size', 'read_io_size', 'ioi_bw', 'nfs_bw', 'lfs_bw', 'sbb_bw'])"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -141,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,9 +201,89 @@
       "\\hline\n",
       "56 & Uncl & Uncl & 0 & 0 & 0B/s & 0B/s  \\\\\n",
       "\\hline\n",
-      "/home_nfs/mimounis/iosea-wp3-recommandation-system/app_decomposer/notebooks\n",
-      "/home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset\n"
+      "{'node_count': 1, 'events': [0, 1, 8, 12, 44, 50, 54, 56], 'read_volumes': [0, 1730808132, 1588775126, 3168984277, 3023280, 7054320, 2519400, 0], 'read_bw': [0, 1730808132.0, 794387563.0, 1584492138.5, 3023280.0, 3527160.0, 2519400.0, 0], 'write_volumes': [0, 0, 2038785597, 4139017218, 5334798849, 5305154361, 5334798849, 0], 'write_bw': [0, 0, 1019392798.5, 1379672406.0, 1333699712.25, 1326288590.25, 1066959769.8, 0], 'read_pattern': ['Uncl', 'Seq', 'Seq', 'Seq', 'Seq', 'Seq', 'Seq', 'Uncl'], 'write_pattern': ['Uncl', 'Uncl', 'Seq', 'Seq', 'Seq', 'Seq', 'Seq', 'Uncl'], 'read_operations': [0, 812, 1305, 909, 601, 1400, 500, 0], 'write_operations': [0, 0, 986, 2000, 1000, 995, 1000, 0]}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 0,\n",
+       "  'write_volume': 0,\n",
+       "  'read_io_pattern': 'uncl',\n",
+       "  'write_io_pattern': 'uncl',\n",
+       "  'read_io_size': 0,\n",
+       "  'write_io_size': 0,\n",
+       "  'ioi_bw': 0.0},\n",
+       " {'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 1730808132,\n",
+       "  'write_volume': 0,\n",
+       "  'read_io_pattern': 'seq',\n",
+       "  'write_io_pattern': 'uncl',\n",
+       "  'read_io_size': 2131537.108374384,\n",
+       "  'write_io_size': 0,\n",
+       "  'ioi_bw': 346161626.4},\n",
+       " {'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 1588775126,\n",
+       "  'write_volume': 2038785597,\n",
+       "  'read_io_pattern': 'seq',\n",
+       "  'write_io_pattern': 'seq',\n",
+       "  'read_io_size': 1217452.2038314177,\n",
+       "  'write_io_size': 2067733.8711967545,\n",
+       "  'ioi_bw': 362756072.3},\n",
+       " {'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 3168984277,\n",
+       "  'write_volume': 4139017218,\n",
+       "  'read_io_pattern': 'seq',\n",
+       "  'write_io_pattern': 'seq',\n",
+       "  'read_io_size': 3486231.327832783,\n",
+       "  'write_io_size': 2069508.609,\n",
+       "  'ioi_bw': 592832908.9},\n",
+       " {'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 3023280,\n",
+       "  'write_volume': 5334798849,\n",
+       "  'read_io_pattern': 'seq',\n",
+       "  'write_io_pattern': 'seq',\n",
+       "  'read_io_size': 5030.415973377704,\n",
+       "  'write_io_size': 5334798.849,\n",
+       "  'ioi_bw': 267344598.45},\n",
+       " {'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 7054320,\n",
+       "  'write_volume': 5305154361,\n",
+       "  'read_io_pattern': 'seq',\n",
+       "  'write_io_pattern': 'seq',\n",
+       "  'read_io_size': 5038.8,\n",
+       "  'write_io_size': 5331813.428140704,\n",
+       "  'ioi_bw': 265963150.05},\n",
+       " {'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 2519400,\n",
+       "  'write_volume': 5334798849,\n",
+       "  'read_io_pattern': 'seq',\n",
+       "  'write_io_pattern': 'seq',\n",
+       "  'read_io_size': 5038.8,\n",
+       "  'write_io_size': 5334798.849,\n",
+       "  'ioi_bw': 213895833.95999998},\n",
+       " {'job_id': 3918,\n",
+       "  'nodes': 1,\n",
+       "  'read_volume': 0,\n",
+       "  'write_volume': 0,\n",
+       "  'read_io_pattern': 'uncl',\n",
+       "  'write_io_pattern': 'uncl',\n",
+       "  'read_io_size': 0,\n",
+       "  'write_io_size': 0,\n",
+       "  'ioi_bw': 0.0}]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -206,7 +321,7 @@
     "    print(\" & \".join(phase_str) + \"  \\\\\\\\\")\n",
     "    print(\"\\\\hline\")\n",
     "\n",
-    "    \n",
+    "print(representation)\n",
     "csv_file = os.path.join(dataset_path, f\"dataset_job_{jobid}.csv\")\n",
     "cd.get_phases_features(representation, job_id=jobid, dataset=csv_file)\n",
     "        "
