--- a/app_decomposer/notebooks/comaprison_simulation_ioi_mixed_mode.ipynb
+++ b/app_decomposer/notebooks/comaprison_simulation_ioi_mixed_mode.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,32 +133,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   job_id  nodes read_volume write_volume read_io_pattern write_io_pattern  \\\n",
-      "0    3918      1          0B           0B            uncl             uncl   \n",
-      "1    3918      1     1.73 GB           0B             seq             uncl   \n",
-      "2    3918      1     1.59 GB      2.04 GB             seq              seq   \n",
-      "3    3918      1     3.17 GB      4.14 GB             seq              seq   \n",
-      "4    3918      1     3.02 MB      5.33 GB             seq              seq   \n",
-      "5    3918      1     7.05 MB      5.31 GB             seq              seq   \n",
-      "6    3918      1     2.52 MB      5.33 GB             seq              seq   \n",
-      "7    3918      1          0B           0B            uncl             uncl   \n",
-      "\n",
-      "  read_io_size write_io_size     ioi_bw     nfs_bw     lfs_bw   sbb_bw  \n",
-      "0           0B            0B         0B         0B         0B       0B  \n",
-      "1      2.13 MB            0B  346.16 MB  110.21 MB    2.24 GB  3.79 GB  \n",
-      "2      1.22 MB       2.07 MB  362.76 MB  104.03 MB  843.42 MB  2.38 GB  \n",
-      "3      3.49 MB       2.07 MB  592.83 MB   152.8 MB  991.08 MB   2.2 GB  \n",
-      "4      5.03 KB       5.33 MB  267.34 MB  101.96 MB  743.83 MB  1.33 GB  \n",
-      "5      5.04 KB       5.33 MB  265.96 MB  107.03 MB  953.29 MB  1.33 GB  \n",
-      "6      5.04 KB       5.33 MB   213.9 MB  108.87 MB  983.48 MB  1.34 GB  \n",
-      "7           0B            0B         0B         0B         0B       0B  \n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] File /home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset/complete_dataset_job_3918_5.0 GB.csv does not exist: '/home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset/complete_dataset_job_3918_5.0 GB.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\app_decomposer\\notebooks\\comaprison_simulation_ioi_mixed_mode.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/a770398/IO-SEA/io-sea-3.4-analytics/app_decomposer/notebooks/comaprison_simulation_ioi_mixed_mode.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m print_readable_values(\u001b[39m\"\u001b[39;49m\u001b[39m/home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset/complete_dataset_job_3918_5.0 GB.csv\u001b[39;49m\u001b[39m\"\u001b[39;49m, [\u001b[39m\"\u001b[39;49m\u001b[39mread_volume\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mwrite_volume\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mwrite_io_size\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mread_io_size\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mioi_bw\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mnfs_bw\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mlfs_bw\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39msbb_bw\u001b[39;49m\u001b[39m'\u001b[39;49m])\n",
+      "File \u001b[1;32mc:\\Users\\a770398\\IO-SEA\\io-sea-3.4-analytics\\app_decomposer\\notebooks\\utils_demo.py:33\u001b[0m, in \u001b[0;36mprint_readable_values\u001b[1;34m(dataset_path, columns_list)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mprint_readable_values\u001b[39m(dataset_path, columns_list):\n\u001b[0;32m     32\u001b[0m     \u001b[39m\"\"\"Allows to see csv dataframe with values converted in readable manner.\"\"\"\u001b[39;00m\n\u001b[1;32m---> 33\u001b[0m     df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_csv(dataset_path, index_col\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m     34\u001b[0m     \u001b[39mfor\u001b[39;00m column \u001b[39min\u001b[39;00m columns_list:\n\u001b[0;32m     35\u001b[0m         df[column] \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(\u001b[39mlambda\u001b[39;00m x: convert_size(x), df[column]\u001b[39m.\u001b[39mto_numpy()\u001b[39m.\u001b[39mflatten()))\n",
+      "File \u001b[1;32mc:\\Users\\a770398\\AppData\\Local\\Continuum\\anaconda3\\envs\\iosea-venv\\lib\\site-packages\\pandas\\io\\parsers.py:676\u001b[0m, in \u001b[0;36m_make_parser_function.<locals>.parser_f\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    623\u001b[0m     engine_specified \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m    625\u001b[0m kwds\u001b[39m.\u001b[39mupdate(\n\u001b[0;32m    626\u001b[0m     delimiter\u001b[39m=\u001b[39mdelimiter,\n\u001b[0;32m    627\u001b[0m     engine\u001b[39m=\u001b[39mengine,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    673\u001b[0m     skip_blank_lines\u001b[39m=\u001b[39mskip_blank_lines,\n\u001b[0;32m    674\u001b[0m )\n\u001b[1;32m--> 676\u001b[0m \u001b[39mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[1;32mc:\\Users\\a770398\\AppData\\Local\\Continuum\\anaconda3\\envs\\iosea-venv\\lib\\site-packages\\pandas\\io\\parsers.py:448\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    445\u001b[0m _validate_names(kwds\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mnames\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    447\u001b[0m \u001b[39m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 448\u001b[0m parser \u001b[39m=\u001b[39m TextFileReader(fp_or_buf, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m    450\u001b[0m \u001b[39mif\u001b[39;00m chunksize \u001b[39mor\u001b[39;00m iterator:\n\u001b[0;32m    451\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\n",
+      "File \u001b[1;32mc:\\Users\\a770398\\AppData\\Local\\Continuum\\anaconda3\\envs\\iosea-venv\\lib\\site-packages\\pandas\\io\\parsers.py:880\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m    877\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m kwds:\n\u001b[0;32m    878\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptions[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m kwds[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m--> 880\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_engine(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mengine)\n",
+      "File \u001b[1;32mc:\\Users\\a770398\\AppData\\Local\\Continuum\\anaconda3\\envs\\iosea-venv\\lib\\site-packages\\pandas\\io\\parsers.py:1114\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, engine)\u001b[0m\n\u001b[0;32m   1112\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_make_engine\u001b[39m(\u001b[39mself\u001b[39m, engine\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mc\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m   1113\u001b[0m     \u001b[39mif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mc\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m-> 1114\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine \u001b[39m=\u001b[39m CParserWrapper(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mf, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions)\n\u001b[0;32m   1115\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   1116\u001b[0m         \u001b[39mif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpython\u001b[39m\u001b[39m\"\u001b[39m:\n",
+      "File \u001b[1;32mc:\\Users\\a770398\\AppData\\Local\\Continuum\\anaconda3\\envs\\iosea-venv\\lib\\site-packages\\pandas\\io\\parsers.py:1891\u001b[0m, in \u001b[0;36mCParserWrapper.__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m   1888\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39musecols, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39musecols_dtype \u001b[39m=\u001b[39m _validate_usecols_arg(kwds[\u001b[39m\"\u001b[39m\u001b[39musecols\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m   1889\u001b[0m kwds[\u001b[39m\"\u001b[39m\u001b[39musecols\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39musecols\n\u001b[1;32m-> 1891\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader \u001b[39m=\u001b[39m parsers\u001b[39m.\u001b[39;49mTextReader(src, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m   1892\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39munnamed_cols \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reader\u001b[39m.\u001b[39munnamed_cols\n\u001b[0;32m   1894\u001b[0m passed_names \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnames \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[1;32mpandas\\_libs\\parsers.pyx:374\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\parsers.pyx:673\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] File /home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset/complete_dataset_job_3918_5.0 GB.csv does not exist: '/home_nfs/mimounis/iosea-wp3-recommandation-system/performance_data/performance_data/dataset/complete_dataset_job_3918_5.0 GB.csv'"
      ]
     }
    ],
@@ -176,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +275,7 @@
        "  'ioi_bw': 0.0}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -465,6 +459,7 @@
          },
          "mode": "lines+markers",
          "name": "original bytesRead signal from IOI",
+         "showlegend": true,
          "text": [
           "class=0",
           "class=1",
@@ -689,6 +684,7 @@
          },
          "mode": "lines+markers",
          "name": "original bytesWritten signal from IOI",
+         "showlegend": true,
          "text": [
           "class=0",
           "class=0",
@@ -914,7 +910,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           0,
@@ -932,7 +928,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           1,
@@ -950,7 +946,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           8,
@@ -968,7 +964,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           9,
@@ -986,7 +982,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           12,
@@ -1004,7 +1000,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           14,
@@ -1022,7 +1018,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           7,
@@ -1040,7 +1036,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           9,
@@ -1058,7 +1054,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           12,
@@ -1076,7 +1072,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           15,
@@ -1094,7 +1090,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           46,
@@ -1112,7 +1108,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           50,
@@ -1130,7 +1126,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           55,
@@ -1148,7 +1144,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           59,
@@ -1166,7 +1162,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           63,
@@ -1184,7 +1180,7 @@
           "width": 0.5
          },
          "mode": "lines",
-         "showlegend": false,
+         "showlegend": true,
          "type": "scatter",
          "x": [
           66,
@@ -1201,6 +1197,7 @@
          },
          "mode": "lines",
          "name": "read signal slices with constant bw",
+         "showlegend": true,
          "type": "scatter",
          "x": [
           0,
@@ -1353,6 +1350,7 @@
          },
          "mode": "lines",
          "name": "write signal slices with constant bw",
+         "showlegend": true,
          "type": "scatter",
          "x": [
           0,
@@ -2333,7 +2331,7 @@
    "source": [
     "plot_detected_phases(jobid, merge=True, show_phases=True, \n",
     "                     ts=(timestamps, original_read, original_write), \n",
-    "                     width=1200, height=600)"
+    "                     width=1200, height=600, show_legend=True)"
    ]
   },
   {
@@ -5880,7 +5878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "iosea-venv",
    "language": "python",
    "name": "python3"
   },
@@ -5894,12 +5892,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "67356b80ae16e0e40687386dbd074ace3ba90441f54bfe58917536db46d8a36b"
+    "hash": "c87beb4c7de1fcbf6155f8da331fc04a584374d4c389d75c2ece6a4f03553c96"
    }
   }
  },
