adding logs and jupyter notebook for data model

--- a/performance_data/performance_data/notebooks/perf_regression.ipynb
+++ b/performance_data/performance_data/notebooks/perf_regression.ipynb
@@ -2,11 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import os\n",
+    "import os, sys\n",
     "from os.path import dirname\n",
     "import random\n",
     "import pandas as pd\n",
@@ -14,35 +25,74 @@
     "import matplotlib.pyplot as plt\n",
     "from unittest.mock import MagicMock, patch\n",
     "from performance_data.data_table import PhaseData, DataTable\n",
-    "from performance_data.data_model import PhaseGenerator, RegressionModel, RandomForestModel\n"
+    "from performance_data.data_model import PhaseGenerator, AbstractModel\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "import loguru\n",
+    "loguru.logger.remove()\n",
+    "loguru.logger.add(sys.stderr, level=\"ERROR\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home_nfs/mimounis/anaconda3/envs/py38/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:702: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['nodes', 'read_volume', 'write_volume', 'read_io_pattern',\n",
-      "       'write_io_pattern', 'read_io_size', 'write_io_size', 'lfs_bw', 'nfs_bw',\n",
-      "       'sbb_bw'],\n",
-      "      dtype='object')\n"
+      "Model MLPRegressor:-5.254840255040993\n",
+      "Model LinearRegression:0.06618709975936743\n",
+      "Model Ridge:0.21161624105479693\n",
+      "Model Lasso:0.06618732651978532\n",
+      "Model ElasticNet:0.1885318077778304\n",
+      "Model DecisionTreeRegressor:0.03837576505693985\n",
+      "Model RandomForestRegressor:0.4063241884150618\n",
+      "Model GradientBoostingRegressor:0.33384140551947206\n",
+      "Model SVR:-0.36834808380431827\n"
      ]
     }
    ],
    "source": [
-    "# check the dataset file\n",
-    "current_dir = dirname(dirname(os.getcwd()))\n",
-    "dataset_file = os.path.join(current_dir, \"tests\",\n",
-    "                            \"test_data\", \"test_generated_dataset.csv\")\n",
-    "complete_dataset_file = os.path.join(current_dir, \"tests\",\n",
-    "                                     \"test_data\", \"complete_test_generated_dataset.csv\")\n",
-    "complete_data = pd.read_csv(complete_dataset_file)\n",
-    "complete_data.head()\n",
-    "print(complete_data.columns)"
+    "def plot_fit(model):\n",
+    "    \"\"\"\n",
+    "    Plots the fit of the model on the training data.\n",
+    "    \"\"\"\n",
+    "    # Make predictions on the training data\n",
+    "    y_test_pred = model.predict(model.X_test)\n",
+    "\n",
+    "    # Plot the fit of the model on the training data\n",
+    "    plt.scatter(model.y_test, y_test_pred, color='blue')\n",
+    "    plt.ylabel(\"Predictions\")\n",
+    "    plt.xlabel(\"True Values\")\n",
+    "    plt.title(\"Fit of the Model on the Training Data\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "for Model in [MLPRegressor, LinearRegression, Ridge, Lasso, ElasticNet, \n",
+    "              DecisionTreeRegressor, RandomForestRegressor, GradientBoostingRegressor, SVR]:\n",
+    "    \n",
+    "    class RegModel(AbstractModel):\n",
+    "        def _create_model(self):\n",
+    "            return Model()\n",
+    "    \n",
+    "    model = RegModel()\n",
+    "    model.train_model()\n",
+    "    score = model.evaluate_model()\n",
+    "    print(f\"Model {Model.__name__}:{score}\")\n",
+    "    #plot_fit(model)\n",
+    "\n"
    ]
   },
   {
