feature(cluster_sim): connection between model and simulator

--- a/performance_data/performance_data/notebooks/perf_regression.ipynb
+++ b/performance_data/performance_data/notebooks/perf_regression.ipynb
@@ -188,21 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-20 11:35:56.896 | INFO     | performance_data.data_model:_prepare_input_data:318 - Preparing input data with columns: ['nodes', 'read_volume', 'write_volume', 'read_io_pattern', 'write_io_pattern', 'read_io_size', 'write_io_size']\n"
+      "2023-06-20 17:29:28.652 | INFO     | performance_data.data_model:_prepare_input_data:318 - Preparing input data with columns: ['nodes', 'read_volume', 'write_volume', 'read_io_pattern', 'write_io_pattern', 'read_io_size', 'write_io_size']\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.49068018e+08]\n"
+      "349068018.27425593\n"
      ]
     }
    ],
@@ -228,6 +228,10 @@
     "            'read_io_pattern': ['stride'], \n",
     "            'write_io_pattern': ['stride'],\n",
     "        })\n",
+    "\n",
+    "new_data2 = pd.DataFrame({'cores': [1], 'read_io_size': [8e6], 'write_io_size': [8e6],\n",
+    "                         'read_volume': [169e6], 'write_volume': [330e6], \n",
+    "                         'read_io_pattern': ['stride'], 'write_io_pattern': ['seq']})\n",
     "\n",
     "predictions = load_and_predict(model_path, new_data1, iops=True)\n",
     "print(predictions.values.flatten()[0])\n"
