fix: corrected the 'contains' filtering syntax
- Updated the filtering parameters to use 'contains' comparator for string fields

refactor: improved display_features function

- Updated the function to optionally add a centroid to the features
- Fixed the issue with t-SNE not having a 'transform' method
- Ensured the correct handling and visualization of the centroid

fix: addressed DataFrame 'append' method deprecation

- Replaced DataFrame 'append' method with 'concat' to handle pandas 2.0 changes
- Fixed issues with DataFrame indexing for the 'centroid' and 'reduced_centroid'

--- a/app_decomposer/notebooks/central-workflow.ipynb
+++ b/app_decomposer/notebooks/central-workflow.ipynb
@@ -1256,8 +1256,8 @@
     "                    size=size,\n",
     "                    color=color,\n",
     "                ),\n",
-    "                text=[str(job_id)[:5]],\n",
-    "                name=str(job_id)[:5]\n",
+    "                text=[str(job_id)[-7:]],\n",
+    "                name=str(job_id)[-7:]\n",
     "            ))\n",
     "        else:\n",
     "            raise ValueError(\"Invalid number of components. n_components must be 2 or 3.\")\n",
